echo-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo-edge
spec:
  hosts:
  - "*"
  gateways:
  - echo-gateway
  http:
  - match:
    - uri:
        exact: /echo
    route:
    - destination:
        host: echo
        port:
          number: 8080
    appendHeaders:
        x-custom-header: myvalue
